# SPA-CC-validation

./: .gitignore  Cargo.toml  README.md
src/: api.rs  main.rs  models.rs  validations.rs
static/: styles.css
templates/: index.html  success.html
