[package]
name = "SPA-CC-validation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
chrono = { version = "0.4.31", fatures = ["serde"] }
serde = {versin = "1.0.188", features = ["derive"] }
tokio = { version="1.32.0", features =["macros", "rt-multi-thread"] }
