[package]
name = "SPA-CC-validation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
anyhow = "1.0.75"
askama = "0.12.0"
chrono = "0.4.31"
env_logger = "0.10.0"
log = "0.4.20"
mime = "0.3.17"
serde = {versin = "1.0.188", features = ["derive"] }
tokio = { version="1.32.0", features =["macros", "rt-multi-thread"] }
